created dummy help-tab

--- a/src/main/resources/ui_text_de_DE.properties
+++ b/src/main/resources/ui_text_de_DE.properties
@@ -13,6 +13,7 @@ tooltip_showCodeButton=Code-Stelle für diesen Kommentar anzeigen
 tooltip_currentTime=Aktuelle Abspielzeit
 tooltip_gutterIcon=CodeCast-Kommentar abspielen
 file_not_available=Die aktuelle Datei ist nicht verfügbar. Pfad:
+help_displayName=Hilfe
 download_canceled=Download wurde abgebrochen. Player bitte neu laden.
 download_task_title=Lade CodeCast Audio-Dateien herunter...
 file_already_exist=Es existiert bereits eine Datei mit dem Namen: 
