--- a/src/main/resources/ui_text_de_DE.properties
+++ b/src/main/resources/ui_text_de_DE.properties
@@ -18,3 +18,9 @@ download_canceled=Download wurde abgebrochen. Player bitte neu laden.
 download_task_title=Lade CodeCast Audio-Dateien herunter...
 file_already_exist=Es existiert bereits eine Datei mit dem Namen: 
 download_failed_exception=Es ist keine Datei für den Download verfügbar. Server HTTP code:
+help_introduction=CodeCast ist ein IntelliJ-Plugin, das von Tobias Dollhofer im Rahmen seiner Bachelorarbeit an der Universität Regensburg entwickelt hat. Mit dem Plugin können gesprochene Erklärungen zu wichtigen Codestellen abgespielt werden. Außerdem kann mit der Playlist und der Jump-To-Code-Funktion der Quellcode im Rahmen eines Walkthroughs durchgearbeitet werden.
+help_reload=Der Reload-Button initialisiert das Plugin und die Playlist neu. Das kann helfen, wenn eine Funktion nicht wie gewünscht funktioniert.
+help_autoplay=Die Autoplay-Funktion spielt die Playlist der Reihe nach automatisch ab. In Kombination mit dem Jump-To-Code-Feature wird der Code so in der Form eines Walkthroughs präsentiert und erklärt.
+help_jumpToCode=Das Jump-To-Code-Feature ermöglicht es, automatisiert beim Abspielen eines Audio-Kommentares zur betreffenden Codestelle zu springen. So kann währenddessen mit dem Programmcode interagiert werden.
+help_showCode=Mit diesem Button wird die Codestelle, zu der der aktuelle Kommentar gehört, aufgerufen. 
+help_gutterIcon=An den Codestellen, bei denen diese Icons auftauchen, ist eine Audio-Erklärung vorhanden. Durch Klicken auf das Icon wird die Erklärung abgespielt.
