implemented new jump to code algorithm

--- a/src/main/resources/ui_text_de_DE.properties
+++ b/src/main/resources/ui_text_de_DE.properties
@@ -14,7 +14,7 @@ tooltip_currentTime=Aktuelle Abspielzeit
 tooltip_gutterIcon=CodeCast-Kommentar abspielen
 file_not_available=Die aktuelle Datei ist nicht verfügbar. Pfad:
 help_displayName=Hilfe
-download_canceled=Download wurde abgebrochen. Player bitte neu laden.
+download_canceled=Download wurde abgebrochen, da eine Datei nicht verfügbar ist.
 download_task_title=Lade CodeCast Audio-Dateien herunter...
 file_already_exist=Es existiert bereits eine Datei mit dem Namen: 
 download_failed_exception=Es ist keine Datei für den Download verfügbar. Server HTTP code:
