new texts, improved player ui

--- a/src/main/resources/ui_text_de_DE.properties
+++ b/src/main/resources/ui_text_de_DE.properties
@@ -1,9 +1,11 @@
-codecast_description=Hier können Sie alle Audiokommentare sehen, die für dieses Projekt verfügbar sind.
+codecast_description=Mit der unten zu sehenden Playlist können Sie gesprochene Erklärungen zu diesem Projekt erhalten. Spielen Sie dazu die Kommentare nacheinander ab, oder wählen Sie in der Playlist gezielt Kommentare aus.
+codecast_description_no_comments=An dieser Stelle wird eine Playlist mit gesprochenen Erklärungen zu Codestellen angezeigt. Bei diesem Projekt handelt es sich um kein CodeCast-Projekt, da keine Kommentare verfügbar sind.
 tooltip_reloadButton=Playlist neu laden
 tooltip_autoplayButton=Autoplay aktivieren / deaktivieren
 tooltip_jumpToCodeButton=Automatische Jump-to-Code-Funktion aktivieren / deaktivieren
 tooltip_currentComment=Aktueller Kommentar
 no_comment_available=In diesem Projekt sind keine CodeCast-Kommentare vorhanden.
+comments_loading=CodeCast-Kommentare werden geladen.
 tooltip_playFirst=Ersten Kommentar abspielen
 tooltip_playPrevious=Vorherigen Kommentar abspielen
 tooltip_playPause=Abspielen / Pausieren
